[package]
name = "blog"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
gloo-net = "0.6"
js-sys = "0.3"
leptos = { version = "0.8", features = ["csr"] }
leptos_router = "0.8"
pulldown-cmark = "0.13"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
web-sys = { version = "0.3", features = ["Window", "Document", "Element", "HtmlElement", "KeyboardEvent", "EventTarget", "Location"] }

[build-dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
walkdir = "2"
